deploy: a50458d0cf4fc5175fe5b4aaa2db8134f16625bf

--- a/ch05-03-method-syntax.html
+++ b/ch05-03-method-syntax.html
@@ -191,7 +191,7 @@ fn main() {
     };
 
     println!(
-        &quot;The area of the rectangle is {} square pixels.&quot;,
+        &quot;長方形的面積爲 {} 平方像素。&quot;,
         rect1.area()
     );
 }
