--- a/print.html
+++ b/print.html
@@ -3269,15 +3269,15 @@ add `> ` before every line -->
 </ul>
 </blockquote>
 <h2><a class="header" href="#使用結構體的程式範例" id="使用結構體的程式範例">使用結構體的程式範例</a></h2>
-<p>爲了瞭解我們何時會想要使用結構體，讓我們來寫一支計算長方行面積的程式。我們會先從單一變數開始，在慢慢重構成使用結構體。</p>
-<p>讓我們用 Cargo 建立一個新的專案 <em>rectangles</em> ，它將接收長方形的長度與寬度，然後計算出長方形的面積。範例 5-8 展示了在我們專案底下 <em>src/main.rs</em> 的小程式用其中一種方式寫出來。</p>
+<p>爲了瞭解我們何時會想要使用結構體，讓我們來寫一支計算長方形面積的程式。我們會先從單一變數開始，再慢慢重構成使用結構體。</p>
+<p>讓我們用 Cargo 建立一個新的專案 <em>rectangles</em> ，它將接收長方形的長度與寬度，然後計算出長方形的面積。範例 5-8 展示了在我們專案底下 <em>src/main.rs</em> 用其中一種方式寫出來的小程式。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     let width1 = 30;
     let height1 = 50;
 
     println!(
-        &quot;The area of the rectangle is {} square pixels.&quot;,
+        &quot;長方形的面積爲 {} 平方像素。&quot;,
         area(width1, height1)
     );
 }
@@ -3292,7 +3292,7 @@ fn area(width: u32, height: u32) -&gt; u32 {
    Compiling structs v0.1.0 (file:///projects/structs)
     Finished dev [unoptimized + debuginfo] target(s) in 0.42s
      Running `target/debug/structs`
-The area of the rectangle is 1500 square pixels.
+長方形的面積爲 1500 平方像素。
 </code></pre>
 <p>雖然範例 5-8 可以執行並呼叫 <code>area</code> 函式計算出長方形的面積，但我們可以做得更好。寬度與長度是互相關聯的，因爲它們在一起剛好定義了一個長方形。</p>
 <p>此程式碼的問題在 <code>area</code> 的函式簽名就能看出來：</p>
@@ -3301,7 +3301,7 @@ The area of the rectangle is 1500 square pixels.
 </span><span class="boring">    let height1 = 50;
 </span><span class="boring">
 </span><span class="boring">    println!(
-</span><span class="boring">        &quot;The area of the rectangle is {} square pixels.&quot;,
+</span><span class="boring">        &quot;長方形的面積爲 {} 平方像素。&quot;,
 </span><span class="boring">        area(width1, height1)
 </span><span class="boring">    );
 </span><span class="boring">}
@@ -3310,7 +3310,7 @@ The area of the rectangle is 1500 square pixels.
 <span class="boring">    width * height
 </span><span class="boring">}
 </span></code></pre>
-<p><code>area</code> 函式應該要計算長方形的面積，但是我們寫的函式有兩個參數。參數之間是有關聯的，但是它在我們的程式中沒有表現出來。要是能將寬度與長度組合起來的話，會更容易閱讀與管理。我們可以使用我們在第三章提到的<a href="ch03-02-data-types.html#the-tuple-type">「元組型別」</a><!-- ignore -->。</p>
+<p><code>area</code> 函式應該要計算長方形的面積，但是我們寫的函式有兩個參數。參數之間是有關聯的，但是它在我們的程式中沒有表現出來。要是能將寬度與長度組合起來的話，會更容易閱讀與管理。我們可以使用我們在第三章提到的<a href="ch03-02-data-types.html#%E5%85%83%E7%B5%84%E5%9E%8B%E5%88%A5">「元組型別」</a><!-- ignore -->。</p>
 <h3><a class="header" href="#使用元組重構" id="使用元組重構">使用元組重構</a></h3>
 <p>範例 5-9 展示了我們的程式用元組的另一種寫法。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
@@ -3318,7 +3318,7 @@ The area of the rectangle is 1500 square pixels.
     let rect1 = (30, 50);
 
     println!(
-        &quot;The area of the rectangle is {} square pixels.&quot;,
+        &quot;長方形的面積爲 {} 平方像素。&quot;,
         area(rect1)
     );
 }
@@ -3328,10 +3328,10 @@ fn area(dimensions: (u32, u32)) -&gt; u32 {
 }
 </code></pre></pre>
 <p><span class="caption">範例 5-9：使用元組指定長方形的寬度與長度</span></p>
-<p>一方面來說，此程式的確比較好。元組讓我們增加了一些結構，而我們現在只需要傳遞一個引數。但另一方面來說，此版本的閱讀性反而更差。元組無法命名它的元素，所以我們在計算時反而更讀懂，我們傳得只是元組的索引。</p>
+<p>一方面來說，此程式的確比較好。元組讓我們增加了一些結構，而我們現在只需要傳遞一個引數。但另一方面來說，此版本的閱讀性反而更差。元組無法命名它的元素，所以我們在計算時反而更難讀懂，我們傳得只是元組的索引。</p>
 <p>我們在計算面積時，哪個值是寬度還是長度的確不重要。但如果我們要顯示出來的話，這就很重要了！我們會需要記住元組索引 <code>0</code> 是 <code>width</code> 然後元組索引 <code>1</code> 是 <code>height</code>。如果有其他人要維護這段程式碼的話，他就也得知道並記住這件事才行。但事實上是我們很常忘記這樣數值的意義並導致錯誤發生，因爲我們無法從程式碼推導出資料的意義。</p>
 <h3><a class="header" href="#使用結構體重構賦予更多意義" id="使用結構體重構賦予更多意義">使用結構體重構：賦予更多意義</a></h3>
-<p>我們可以用結構體來爲資料命名以賦予其意義。我們可以將元組轉會成一個有整體名稱且內部資料也都有名稱的資料型別。，如範例 5-10 所示。</p>
+<p>我們可以用結構體來爲資料命名以賦予其意義。我們可以將元組轉換成一個有整體名稱且內部資料也都有名稱的資料型別。，如範例 5-10 所示。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">struct Rectangle {
     width: u32,
@@ -3345,7 +3345,7 @@ fn main() {
     };
 
     println!(
-        &quot;The area of the rectangle is {} square pixels.&quot;,
+        &quot;長方形的面積爲 {} 平方像素。&quot;,
         area(&amp;rect1)
     );
 }
@@ -3355,7 +3355,7 @@ fn area(rectangle: &amp;Rectangle) -&gt; u32 {
 }
 </code></pre></pre>
 <p><span class="caption">範例 5-10：定義 <code>Rectangle</code> 結構體</span></p>
-<p>我們在此定義了一個結構體叫做 <code>Rectangle</code>。在大括號內，我們定義了 <code>width</code> 與 <code>height</code> 的欄位，兩者型別皆爲。然後在 <code>main</code> 中，我們建立了一個寬度爲 30 長度爲 50 的 <code>Rectangle</code> 實例。</p>
+<p>我們在此定義了一個結構體叫做 <code>Rectangle</code>。在大括號內，我們定義了 <code>width</code> 與 <code>height</code> 的欄位，兩者型別皆爲 <code>u32</code>。然後在 <code>main</code> 中，我們建立了一個寬度爲 30 長度爲 50 的 <code>Rectangle</code> 實例。</p>
 <p>現在我們的 <code>area</code> 函式使需要一個參數 <code>rectangle</code>，其型別爲 <code>Rectangle</code> 結構體實例的不可變借用。如同第四章提到的，我們希望借用結構體而非取走其所有權。這樣一來，<code>main</code> 能保留它的所有權並讓 <code>rect1</code> 繼續使用，這也是爲何我們要在要呼叫函式的簽名中使用 <code>&amp;</code>。</p>
 <p><code>area</code> 函式能夠存取 <code>Rectangle</code> 中的 <code>width</code> 與 <code>height</code> 欄位。我們的 <code>area</code> 函式簽名由可以表達出我們想要做的事情了：使用 <code>width</code> 與 <code>height</code> 欄位來計算 <code>Rectangle</code> 的面積。這能表達出寬度與長度之間的關係，並且給了它們容易讀懂的名稱，而不是像元組那樣用索引 <code>0</code> 和 <code>1</code>。這樣清楚多了。</p>
 <h3><a class="header" href="#使用推導特徵實現更多功能" id="使用推導特徵實現更多功能">使用推導特徵實現更多功能</a></h3>
@@ -3410,7 +3410,7 @@ fn main() {
 }
 </code></pre></pre>
 <p><span class="caption">範例 5-12：加上推導（derive） <code>Debug</code> 特徵的標記並印出 <code>Rectangle</code> 實例的格式化資訊</span></p>
-<p>現在當我們執行程式，我們不會在得到錯誤了，而且我們可以看到格式化厚的輸出結果：</p>
+<p>現在當我們執行程式，我們不會在得到錯誤了，而且我們可以看到格式化後的輸出結果：</p>
 <pre><code class="language-console">$ cargo run
    Compiling structs v0.1.0 (file:///projects/structs)
     Finished dev [unoptimized + debuginfo] target(s) in 0.48s
@@ -3428,7 +3428,7 @@ rect1 is Rectangle {
 }
 </code></pre>
 <p>Rust 提供了一些特徵並讓我們可以用 <code>derive</code> 標記來爲自定型別加入些實用的功能。這類的特徵與其行爲都列在附錄 C。我們會在第十章介紹如何定義自定特徵，且如何實作這些特徵的自訂行爲。</p>
-<p>我們的函式 <code>area</code> 最後就非常清楚明白了，它只會計算長方形的面積。這樣的行爲要是能夠緊貼著我們的 <code>Rectangle</code> 結構體，因爲這樣一來它就不會相容於其他型別。讓我們看看我們如何繼續重構我們的程式碼，接下來我們可以將函式 <code>area</code> 轉換爲 <code>Rectangle</code> 型別的*方法（method）*將。</p>
+<p>我們的函式 <code>area</code> 最後就非常清楚明白了，它只會計算長方形的面積。這樣的行爲要是能夠緊貼著我們的 <code>Rectangle</code> 結構體，因爲這樣一來它就不會相容於其他型別。讓我們看看我們如何繼續重構我們的程式碼，接下來我們可以將函式 <code>area</code> 轉換爲 <code>Rectangle</code> 型別的<em>方法（method）</em> 。</p>
 <blockquote>
 <ul>
 <li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
@@ -3460,7 +3460,7 @@ fn main() {
     };
 
     println!(
-        &quot;The area of the rectangle is {} square pixels.&quot;,
+        &quot;長方形的面積爲 {} 平方像素。&quot;,
         rect1.area()
     );
 }
